# QGIS

./: .gitignore
src/auth/: CMakeLists.txt
src/auth/maplarge/: CMakeLists.txt  qgsauthmaplargeedit.cpp  qgsauthmaplargeedit.h  qgsauthmaplargeedit.ui  qgsauthmaplargemethod.cpp  qgsauthmaplargemethod.h
